<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/shape_rectangle"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/view_top"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="@id/view_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="22dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <!--android:adjustViewBounds="true"
                       View resizes to preserve image aspect ratio
                       OR
                       android:scaleType="centerCrop"
                       Image scales and crops to fill the view, keeping aspect ratio
                    -->
                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/alarm"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/img"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/img"
                        />
                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc1"
                        android:textSize="15sp"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/t1"
                        />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc2"
                        android:textSize="15sp"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/t2"
                        />

                    <!--
                <Button
                    android:id="@+id/play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm"
                    android:layout_marginStart="15dp"
                    android:drawableLeft="@drawable/alarm_logo"
                    android:drawableTint="@color/white"
                    android:backgroundTint="#4CAF50"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/t3"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            -->

                    <TextClock
                        android:id="@+id/textClock1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:format12Hour="HH:mm:ss, MMM dd yyyy"
                        android:format24Hour="HH:mm:ss, MMM dd yyyy"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        app:layout_constraintTop_toBottomOf="@id/t3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />



                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/create_alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm"
                        app:icon="@drawable/alarm_add_24px"
                        app:iconGravity="start"
                        app:iconPadding="8dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="#4CAF50"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        app:layout_constraintTop_toBottomOf="@id/textClock1"
                        app:layout_constraintStart_toStartOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardElevation="22dp"
                app:layout_constraintTop_toBottomOf="@id/card1"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/alarm"
                        android:contentDescription="@string/img"
                        android:adjustViewBounds="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:id="@+id/alarm_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/alarm_desc"
                        android:layout_margin="15dp"
                        app:layout_constraintTop_toBottomOf="@id/img2"
                        app:layout_constraintStart_toStartOf="parent"
                        />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/stop_alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stop_alarm"
                        app:icon="@drawable/alarm_add_24px"
                        app:iconGravity="start"
                        app:iconPadding="8dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="#4CAF50"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        app:layout_constraintTop_toBottomOf="@id/alarm_time"
                        app:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>